--- a/trakberry/templates/maint_mgmt.html
+++ b/trakberry/templates/maint_mgmt.html
@@ -25,6 +25,12 @@
             <button style="text-align: left;width:100%;font-size: 60%;border:0px solid rgb(0, 0, 0);
             background-color: rgb(235,240,203);border:none;outline:none;"
             type="submit" name="one" value="{{i.11}}" /><b><font color="#000000">[{{i.4}}] {{i.0}}:{{i.1}}</font></b></button>
+						</div>
+						{% elif i.4 = 'Millwright' %}
+            <div class="body1">
+            <button style="text-align: left;width:100%;font-size: 60%;border:0px solid rgb(0, 0, 0);
+            background-color: rgb(235,240,203);border:none;outline:none;"
+            type="submit" name="one" value="{{i.11}}" /><b><font color="#000000">[{{i.4}}] {{i.0}}:{{i.1}}</font></b></button>
             </div>
         {% else %}
             <div class="body1">
