added the 9341 OP30 tracking

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -19,6 +19,8 @@
 		function R1467(){location.replace("{{request.session.local_toggle}}/chart2_1467")}
 		function L3050(){location.replace("{{request.session.local_toggle}}/chart1_3050")}
 		function R3050(){location.replace("{{request.session.local_toggle}}/chart2_3050")}
+		function L934130(){location.replace("{{request.session.local_toggle}}/chart1_9341_OP30")}
+		function R934130(){location.replace("{{request.session.local_toggle}}/chart2_9341_OP30")}
 	
 	
 	</script>
@@ -315,13 +317,15 @@
 	
 	
 	<br>
-	<button onclick="L1467()">Left Chart</button> (1467) <button onclick="R1467()">Right Chart</button>
+	<button onclick="L1467()">Left</button> (1467 INSP) <button onclick="R1467()">Right</button>
 	<br>
-	<button onclick="L3050()">Left Chart</button> (3050) <button onclick="R3050()">Right Chart</button>
+	<button onclick="L3050()">Left</button> (3050 INSP) <button onclick="R3050()">Right</button>
 	<br>
-	<button onclick="L9341()">Left Chart</button> (9341) <button onclick="R9341()">Right Chart</button>
+	<button onclick="L9341()">Left</button> (9341 INSP) <button onclick="R9341()">Right</button>
 	<br>
-	<button onclick="L0455()">Left Chart</button> (0455) <button onclick="R0455()">Right Chart</button>
+	<button onclick="L934130()">Left</button> (9341 OP30) <button onclick="R934130()">Right</button>
+	<br>
+	<button onclick="L0455()">Left</button> (0455 INSP) <button onclick="R0455()">Right</button>
 	</div>
 	
 	
