trying a server fix for the apps in db.views

--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -136,7 +136,7 @@
 										</ul>
 								</li>  
 							   <li><a href="/switch_local">Switch to Local Deployment</a></li>
-							   <li><a href="{{request.session.local_toggle}}/switch_net">Switch to Server Deployment</a></li>
+							   <li><a href="/trakberry/switch_net">Switch to Server Deployment</a></li>
 							   <li><a href="{{request.session.local_toggle}}/create_table_1">Create DB</a></li> 
 							   <li><a href="{{request.session.local_toggle}}/medium_production">Generate Medium Production</a></li> 
 
