--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -117,6 +117,7 @@
 								<li><a href="{{request.session.local_toggle}}/scrap_backup">Scrap Backup</a></li>
 								<li><a href="{{request.session.local_toggle}}/scrap_restore">Scrap Restore</a></li>
 								<li><a href="{{request.session.local_toggle}}/manpower_update_v2">Manpower Update</a></li>
+								<li><a href="{{request.session.local_toggle}}/matrix_update_v2">Matrix Update</a></li>
 								<li><a href="{{request.session.local_toggle}}/tracking">TRACK</a></li>
 								<li><a href="{{request.session.local_toggle}}/training_matrix3">Matrix</a></li>
 							   <li><a href="{{request.session.local_toggle}}/place_test">Clear All Session Variables</a></li>
