added time down to maintenance app manager

--- a/trakberry/templates/maint_mgmt_backup.html
+++ b/trakberry/templates/maint_mgmt_backup.html
@@ -3,8 +3,6 @@
 
 {% block content %}
 
-
-
 {% if request.session.maint_mgmt_login_password_check != 'True' %}
 <meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/maint_mgmt_login_form" />
 
@@ -22,23 +20,23 @@
             </div>
         {% for i in index %}
 
-        {% if i.0.4 = 'Electrician' %}
+        {% if i.4 = 'Electrician' %}
             <div class="body1">
             <button style="text-align: left;width:100%;font-size: 60%;border:0px solid rgb(0, 0, 0);
             background-color: rgb(235,240,203);border:none;outline:none;"
-            type="submit" name="one" value="{{i.0.11}}" /><b><font color="#000000">[{{i.0.4}}] {{i.0.0}}:{{i.0.1}}&nbsp;&nbsp;&nbsp;&nbsp;({{i.1}}&nbsp;&nbsp;&nbsp;Min Down)</font></b></button>
+            type="submit" name="one" value="{{i.11}}" /><b><font color="#000000">[{{i.4}}] {{i.0}}:{{i.1}}</font></b></button>
 						</div>
-						{% elif i.0.4 = 'Millwright' %}
+						{% elif i.4 = 'Millwright' %}
             <div class="body1">
             <button style="text-align: left;width:100%;font-size: 60%;border:0px solid rgb(0, 0, 0);
             background-color: rgb(235,240,203);border:none;outline:none;"
-            type="submit" name="one" value="{{i.0.11}}" /><b><font color="#000000">[{{i.0.4}}] {{i.0.0}}:{{i.0.1}}&nbsp;&nbsp;&nbsp;&nbsp;({{i.1}}&nbsp;&nbsp;&nbsp;Min Down)</font></b></button>
+            type="submit" name="one" value="{{i.11}}" /><b><font color="#000000">[{{i.4}}] {{i.0}}:{{i.1}}</font></b></button>
             </div>
         {% else %}
             <div class="body1">
             <button style="text-align: left;width:100%;font-size: 60%;border:0px solid rgb(0, 0, 0);
             background-color:rgb(204,208,173);border:none;outline:none;"
-            type="submit" name="one" value="{{i.0.11}}" /><b><font color="#000000">[{{i.0.4}}] {{i.0.0}}:{{i.0.1}}</font></</button>
+            type="submit" name="one" value="{{i.11}}" /><b><font color="#000000">[{{i.4}}] {{i.0}}:{{i.1}}</font></</button>
             </div>
         {% endif %}
 				{% endfor %}
