--- a/trakberry/templates/maint_mgmt_try.html
+++ b/trakberry/templates/maint_mgmt_try.html
@@ -26,19 +26,19 @@
             <div class="body1">
             <button style="text-align: left;width:100%;font-size: 60%;border:0px solid rgb(0, 0, 0);
             background-color: rgb(235,240,203);border:none;outline:none;"
-            type="submit" name="one" value="{{i.0.11}}" /><b><font color="#000000">[{{i.0.4}}] {{i.0.0}}:{{i.0.1}}&nbsp;&nbsp;&nbsp;&nbsp;({{i.1}}&nbsp;&nbsp;&nbsp;Min Down)</font></b></button>
+            type="submit" name="one" value="{{i.11}}" /><b><font color="#000000">[{{i.0.4}}] {{i.0.0}}:{{i.0.1}}&nbsp;&nbsp;&nbsp;&nbsp;({{i.1}}&nbsp;&nbsp;&nbsp;Min Down)</font></b></button>
 						</div>
 						{% elif i.0.4 = 'Millwright' %}
             <div class="body1">
             <button style="text-align: left;width:100%;font-size: 60%;border:0px solid rgb(0, 0, 0);
             background-color: rgb(235,240,203);border:none;outline:none;"
-            type="submit" name="one" value="{{i.0.11}}" /><b><font color="#000000">[{{i.0.4}}] {{i.0.0}}:{{i.0.1}}&nbsp;&nbsp;&nbsp;&nbsp;({{i.1}}&nbsp;&nbsp;&nbsp;Min Down)</font></b></button>
+            type="submit" name="one" value="{{i.11}}" /><b><font color="#000000">[{{i.0.4}}] {{i.0.0}}:{{i.0.1}}</font></b></button>
             </div>
         {% else %}
             <div class="body1">
             <button style="text-align: left;width:100%;font-size: 60%;border:0px solid rgb(0, 0, 0);
             background-color:rgb(204,208,173);border:none;outline:none;"
-            type="submit" name="one" value="{{i.0.11}}" /><b><font color="#000000">[{{i.0.4}}] {{i.0.0}}:{{i.0.1}}</font></</button>
+            type="submit" name="one" value="{{i.11}}" /><b><font color="#000000">[{{i.0.4}}] {{i.0.0}}:{{i.0.1}}</font></</button>
             </div>
         {% endif %}
 				{% endfor %}
