put in a new check best operator tab

--- a/trakberry/templates/main.html
+++ b/trakberry/templates/main.html
@@ -371,12 +371,10 @@ function goBack() {
 				<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span>Employees<b class="caret"></b></a>
 					<ul class="dropdown-menu multi-level">
                         <li><a href="{{request.session.local_toggle}}/training_matrix3">Training Matrix</a></li>
-                        
-                        
-                        
 						<li class="divider"></li> 
+						<li><a href="{{request.session.local_toggle}}/training_performance">Employee vs Job</a></li>
 						<li><a href="#">Schedules</a></li>
-                        <li><a href="#">Extra</a></li>
+            
 						
 						
                     </ul>
