--- a/trakberry/templates/tkb_updater.html
+++ b/trakberry/templates/tkb_updater.html
@@ -2,13 +2,10 @@
 <body style="background-color:rgb(165, 165, 165);">
 		<meta http-equiv="refresh" content="10; url={{request.session.local_toggle}}/auto_updater" />
 	<br><br><br>
-	<font style="font-size: 88px; color:rgb(196, 196, 196); text-shadow: 1px 1px 2px black, 0 0 25px rgb(27, 110, 20), 0 0 5px darkgoldenrod;">Manpower Updater
+	<font style="font-size: 88px; color:rgb(196, 196, 196); text-shadow: 1px 1px 2px black, 0 0 25px rgb(27, 110, 20), 0 0 5px darkgoldenrod;">Daily Updater
 	</font>
 	<br><br><br><br>
-
-	<font style="font-size: 35px; color:rgb(6, 70, 6);">	Last Update Ran: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{request.session.tkb_program}} <br>
+	<font style="font-size: 35px; color:rgb(6, 70, 6);">	Last Update Ran: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{request.session.tkb_program}}  at {{request.session.tkb_update_time}} <br>
 	</font>
-
-
 </body></html>
 
