--- a/trakberry/templates/redirect_tracking.html
+++ b/trakberry/templates/redirect_tracking.html
@@ -1,2 +1,2 @@
 
-<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/{{request.session.tkb_program}}" />
+<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/tracking" />
