--- a/trakberry/templates/maint.html
+++ b/trakberry/templates/maint.html
@@ -199,8 +199,12 @@
 	
 {% elif i.3 == E %}
     <div class="row">
-		<div class="col-sm-8" style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}</div>
-		
+		<!-- <div class="col-sm-8" style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">
+			{{i.0}} : {{ i.1}}</div> -->
+			{% if i.1|slice:"-3:" != wfp %}
+			<div class="col-sm-8" style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">
+				{{i.0}} : {{ i.1 }}</div> 
+			
 	</div>	
     <div class="row">
 		
@@ -208,12 +212,13 @@
 		
 		<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
 		</div>
-
+		{% endif %}
 		
 	</div>
 
 {% else %}
     <div class="row">
+			{% if i.1|slice:"-3:" != wfp %}
 		<div class="col-sm-8" style="background-color: #999999;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}</div>
 		
 	</div>	
@@ -227,7 +232,7 @@
         <!-- <center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center> -->
         <center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center>
 		</div>
-		
+		{% endif %}
 	</div>
 
 
