fixed the matrix bug

--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -112,7 +112,7 @@
 								<li><a href="{{request.session.local_toggle}}/production_entry_check">Production Entry Check</a></li>
 								<li><a href="{{request.session.local_toggle}}/production_entry_fix">Production Entry Fix</a></li>
 
-								<li><a href="{{request.session.local_toggle}}/production_entry_fix">Production Entry Fix</a></li>
+								<li><a href="{{request.session.local_toggle}}/prediction1">Prediction</a></li>
 
 								<li><a href="{{request.session.local_toggle}}/scrapdate_fix1">Fix Scrap Date</a></li>
 								<li><a href="{{request.session.local_toggle}}/scrap_backup">Scrap Backup</a></li>
